@@ -233,7 +233,7 @@ try
 			set_platform Flash "flash" dir;
 			if com.flash_version < 9 then com.flash_version <- 9;
 			gen_as3 := true;
-			Common.define com "as3gen";
+			Common.define com "as3";
 			Common.define com "no_inline";
 		),"<directory> : generate AS3 code into target directory");
 		("-swf",Arg.String (set_platform Flash "flash"),"<file> : compile code to Flash SWF file");
