@@ -67,7 +67,7 @@ class Stack {
 	public static function exceptionStack() : Array<StackItem> {
 		#if neko
 			return makeStack(untyped __dollar__excstack());
-		#elseif as3gen
+		#elseif as3
 			return new Array();
 		#elseif flash9
 			var err : flash.Error = untyped flash.Boot.lastError;
